--- a/index.html
+++ b/index.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My GitHub Pages Site</title>
+    <title>PC PSU Price Finder</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #343a40;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+        }
+        .search-bar {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .search-bar input {
+            padding: 10px;
+            width: 70%;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .search-bar button {
+            padding: 10px;
+            border: none;
+            background: #007bff;
+            color: #fff;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .search-bar button:hover {
+            background: #0056b3;
+        }
+        .links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .links a {
+            margin: 10px 0;
+            padding: 10px 15px;
+            text-decoration: none;
+            color: #fff;
+            background: #28a745;
+            border-radius: 4px;
+            transition: background 0.3s ease;
+        }
+        .links a:hover {
+            background: #218838;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to my GitHub Pages Site!</h1>
-    <p>Hello, world! This is the default index.html page for my site.</p>
+    <header>
+        <h1>PC PSU Price Finder</h1>
+    </header>
+    <div class="container">
+        <div class="search-bar">
+            <input type="text" id="search" placeholder="Type a PSU model (e.g., Corsair, EVGA)...">
+            <button onclick="searchPSU()">Search</button>
+        </div>
+        <h2>Search Popular E-commerce Sites:</h2>
+        <div class="links">
+            <a href="https://www.amazon.com/s?k=pc+psu" target="_blank">Search Amazon</a>
+            <a href="https://www.newegg.com/p/pl?d=pc+psu" target="_blank">Search Newegg</a>
+            <a href="https://www.bestbuy.com/site/searchpage.jsp?st=pc+psu" target="_blank">Search Best Buy</a>
+        </div>
+    </div>
+    <script>
+        function searchPSU() {
+            const query = document.getElementById('search').value;
+            if (query) {
+                alert('Use the links below to search for your PSU model: \nAmazon, Newegg, BestBuy');
+            } else {
+                alert('Please type a PSU model in the search bar.');
+            }
+        }
+    </script>
 </body>
 </html>
