--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 
 <script>
     // ⚠️ IMPORTANTE: Cole seu link CSV do Google Sheets aqui (File > Share > Publish to Web > CSV)
-    const SHEET_URL = "SEU_LINK_CSV_DO_GOOGLE_SHEETS_AQUI";
-
+    const SHEET_URL = https://docs.google.com/spreadsheets/d/1siJAnVoA3KwnoQWYtkB-wODIb1j1_YP2VHC-djXnFtg/edit?usp=drivesdk ;
     async function loadCows() {
         try {
             const response = await fetch(SHEET_URL);
