--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>✅ <strong>Para o Veterinário:</strong> Acompanhe o rebanho e use a calculadora automática de dosagem.</p>
         </div>
 
-        <a href="SEU_LINK_DO_GOOGLE_FORMS_AQUI" target="_blank" class="btn btn-add">
+        <a href="https://docs.google.com/spreadsheets/d/1siJAnVoA3KwnoQWYtkB-wODIb1j1_YP2VHC-djXnFtg/edit?usp=sharing" target="_blank" class="btn btn-add">
             ➕ Anunciar Animal (Preencher Ficha)
         </a>
     </header>
